--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -12,8 +12,8 @@ env:
   POLYCLI_VERSION: v0.1.78
 
 jobs:
-  call-cdk-e2e:
-    uses: ./.github/workflows/cdk-e2e.yml
+  call-agglayer-e2e:
+    uses: ./.github/workflows/agglayer-e2e.yml
 
   test-e2e:
     strategy:
