--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -120,10 +120,10 @@ jobs:
           export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
           if [[ $ENCLAVE == "op" ]]; then
               export DISABLE_L2_FUND="false"
-              bats ./tests/aggkit/bridge-e2e.bats
+              bats ./tests/aggkit/bridge-e2e.bats ./tests/aggkit/e2e-pp.bats
           else
               export DISABLE_L2_FUND="true"
-              bats ./tests/aggkit/bridge-e2e-custom-gas.bats ./tests/aggkit/bridge-e2e.bats
+              bats ./tests/aggkit/bridge-e2e-custom-gas.bats ./tests/aggkit/bridge-e2e.bats ./tests/aggkit/e2e-pp.bats
           fi
           popd
 
