--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
       - uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
         with:
-          username: ${{ env.DOCKER_USERNAME }}
+          username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Get short commit id
@@ -43,7 +43,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          tags: ${{ env.DOCKER_USERNAME }}/test-runner:${{ env.SHORT_COMMIT_ID }}-${{ matrix.base_image }}
+          tags: ${{ vars.DOCKER_USERNAME }}/test-runner:${{ env.SHORT_COMMIT_ID }}-${{ matrix.base_image }}
           build-args: |
             BASE_IMAGE=${{ matrix.base_image }}
           push: true
