--- a/.github/workflows/cdk-e2e.yml
+++ b/.github/workflows/cdk-e2e.yml
@@ -134,11 +134,11 @@ jobs:
           export PROJECT_ROOT="$PWD"
           export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
           export DISABLE_L2_FUND="true"
-          bats tests/cdk/access-list-e2e.bats tests/cdk/basic-e2e.bats tests/cdk/e2e.bats
+          bats tests/cdk/access-list-e2e.bats tests/cdk/basic-e2e.bats
           if [[ "${{ inputs.test-name }}" == "test-fork9-cdk-validium-e2e" || "${{ inputs.test-name }}" == "test-fork11-rollup-e2e" || "${{ inputs.test-name }}" == "test-fork12-rollup-e2e-zkevm-bridge" ]]; then
-            bats tests/cdk/bridge-e2e.bats
+            bats tests/cdk/e2e.bats tests/cdk/bridge-e2e.bats
           elif [[ "${{ inputs.test-name }}" == "test-fork12-cdk-validium-e2e" || "${{ inputs.test-name }}" == "test-fork12-rollup-e2e" ]]; then
-            bats tests/aggkit/bridge-e2e.bats tests/aggkit/bridge-e2e-custom-gas.bats
+            bats tests/cdk/e2e.bats tests/aggkit/bridge-e2e.bats tests/aggkit/bridge-e2e-custom-gas.bats
           elif [[ "${{ inputs.test-name }}" == "test-fork12-pessimistic-e2e" ]]; then
             bats tests/aggkit/bridge-e2e.bats tests/aggkit/bridge-e2e-custom-gas.bats tests/aggkit/bridge-sovereign-chain-e2e.bats
           fi
