feat: use feature/tools-fixes contracts branch
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/scenarios/upgrade-agglayer/env.example
+++ b/scenarios/upgrade-agglayer/env.example
@@ -1,3 +1,6 @@
 ENCLAVE_NAME=cdk
 KURTOSIS_PACKAGE_HASH=b347802d86584488a8ed1ea4b85a63e9b79409c4 # v0.3.4 + v9.0.0-rc.2-pp contracts
-AGGLAYER_CONTRACTS_VERSION=tags/v10.1.0-rc.6 # feature/upgradev3-unsafeSkipStorageCheck
+# AGGLAYER_CONTRACTS_VERSION=tags/v10.1.0-rc.6 # feature/upgradev3-unsafeSkipStorageCheck
+AGGLAYER_CONTRACTS_VERSION=feature/tools-fixes
+
+# Kurtosis CDK: jihwan/contracts/v9.0.0-rc.2-pp -> cdk-erigon validium
