--- a/.github/workflows/aggkit-e2e-multi-chains.yml
+++ b/.github/workflows/aggkit-e2e-multi-chains.yml
@@ -29,6 +29,11 @@ on:
         required: true
         type: string
 
+      kurtosis-cdk-args-3:
+        description: "Input arguments for the Kurtosis CDK package 3."
+        required: true
+        type: string
+
       kurtosis-cdk-enclave-name:
         description: "The name to be used for the kurtosis enclave"
         required: true
@@ -51,6 +56,12 @@ on:
         required: false
         type: string
         default: "aggkit"
+
+      number-of-chains:
+        description: "The number of chains to run the test on"
+        required: true
+        type: number
+        default: 2
 
 jobs:
   test-multi-aggkit-e2e:
@@ -111,16 +122,25 @@ jobs:
           if [[ $docker_tag == "" ]]; then
               echo '${{ inputs.kurtosis-cdk-args-1 }}' | tee /tmp/kurtosis-args-1.json
               echo '${{ inputs.kurtosis-cdk-args-2 }}' | tee /tmp/kurtosis-args-2.json
+              if [[ ${{ inputs.number-of-chains }} -eq 3 ]]; then
+                echo '${{ inputs.kurtosis-cdk-args-3 }}' | tee /tmp/kurtosis-args-3.json
+              fi
               exit
           fi
           echo '${{ inputs.kurtosis-cdk-args-1 }}' | jq --arg img '${{ inputs.docker-image-override }}' --arg tag '${{ inputs.docker-tag }}' '.args[$img] = $tag' | tee /tmp/kurtosis-args-1.json
           echo '${{ inputs.kurtosis-cdk-args-2 }}' | jq --arg img '${{ inputs.docker-image-override }}' --arg tag '${{ inputs.docker-tag }}' '.args[$img] = $tag' | tee /tmp/kurtosis-args-2.json
+          if [[ ${{ inputs.number-of-chains }} -eq 3 ]]; then
+            echo '${{ inputs.kurtosis-cdk-args-3 }}' | jq --arg img '${{ inputs.docker-image-override }}' --arg tag '${{ inputs.docker-tag }}' '.args[$img] = $tag' | tee /tmp/kurtosis-args-3.json
+          fi
 
       - name: Startup the kurtosis-cdk package
         run: |
           pushd kurtosis-cdk || exit 1
           kurtosis run --enclave '${{ inputs.kurtosis-cdk-enclave-name }}' --args-file /tmp/kurtosis-args-1.json .
           kurtosis run --enclave '${{ inputs.kurtosis-cdk-enclave-name }}' --args-file /tmp/kurtosis-args-2.json .
+          if [[ ${{ inputs.number-of-chains }} -eq 3 ]]; then
+            kurtosis run --enclave '${{ inputs.kurtosis-cdk-enclave-name }}' --args-file /tmp/kurtosis-args-3.json .
+          fi
           popd
 
       - name: Run e2e tests
@@ -135,7 +155,7 @@ jobs:
           export DISABLE_L2_FUND="true"
           chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
           export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
-          bats ./tests/aggkit/bridge-l2_to_l2-e2e.bats
+          bats ./tests/aggkit/bridge-e2e-2-l2s.bats
           popd
 
       - name: Dump enclave logs
