add 3 network flow

--- a/.github/workflows/aggkit-e2e-multi-chains.yml
+++ b/.github/workflows/aggkit-e2e-multi-chains.yml
@@ -61,7 +61,7 @@ on:
 
       number-of-chains:
         description: "The number of chains to run the test on"
-        required: true
+        required: false
         type: number
         default: 2
 
