--- a/.github/workflows/aggkit-e2e-multi-chains.yml
+++ b/.github/workflows/aggkit-e2e-multi-chains.yml
@@ -162,7 +162,7 @@ jobs:
           chmod +x "/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
           export AGGSENDER_IMPORTED_BRIDGE_PATH="/tmp/${{ inputs.aggsender-find-imported-bridge-artifact }}"
           if [[ ${{ inputs.number-of-chains }} -eq 3 ]]; then
-            bats ./tests/aggkit/bridge-e2e-2-chains.bats ./tests/aggkit/bridge-e2e-3-chains.bats
+            bats ./tests/aggkit/bridge-e2e-3-chains.bats
           else
             bats ./tests/aggkit/bridge-e2e-2-chains.bats
           fi
