--- a/scenarios/attach_outpost/env.example
+++ b/scenarios/attach_outpost/env.example
@@ -8,3 +8,6 @@ OP_GETH_IMAGE="us-docker.pkg.dev/oplabs-tools-artifacts/images/op-geth:v1.101503
 OP_NODE_IMAGE="us-docker.pkg.dev/oplabs-tools-artifacts/images/op-node:v1.13.2"
 OP_BATCHER_IMAGE="us-docker.pkg.dev/oplabs-tools-artifacts/images/op-batcher:v1.12.0"
 OP_PROPOSER_IMAGE="us-docker.pkg.dev/oplabs-tools-artifacts/images/op-proposer:v1.10.1-rc.2"
+
+AGGLAYER_CONTRACTS_TAG=v10.1.0-rc.8
+AGGKIT_IMAGE=ghcr.io/agglayer/aggkit:0.3.0-beta6
