--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -1,4 +1,4 @@
-name: docker
+name: docker-push
 
 on:
   # Trigger the workflow on pull requests made to the main branch.
@@ -25,11 +25,6 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    strategy:
-      matrix:
-        base_image:
-          - cdk
-          - pos
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -47,7 +42,5 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          tags: ${{ vars.DOCKER_USERNAME }}/e2e:${{ env.SHORT_COMMIT_ID }}-${{ matrix.base_image }}
-          build-args: |
-            BASE_IMAGE=${{ matrix.base_image }}
+          tags: ${{ vars.DOCKER_USERNAME }}/e2e:${{ env.SHORT_COMMIT_ID }}
           push: true
