--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,35 +1,16 @@
-name: docker
+name: docker-build
 
 on:
-  # Trigger the workflow on pull requests made to the main branch.
-  # But avoid creating new images when changes only affect .github files.
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - ".github/**"
-
-  # Allow manual triggering of the workflow.
-  workflow_dispatch:
-    inputs:
-      checkout_ref:
-        description: The branch, commit or tag to checkout
-        type: string
-        required: false
+  pull_request:
 
 permissions:
   contents: read
   packages: write
 
 jobs:
-  build-and-push:
+  build:
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    strategy:
-      matrix:
-        base_image:
-          - cdk
-          - pos
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
@@ -44,10 +25,8 @@ jobs:
           echo "SHORT_COMMIT_ID=${short_commit_id}" >> "${GITHUB_ENV}"
           echo "SHORT_COMMIT_ID=${short_commit_id}" # debug
 
-      - name: Build and push image
+      - name: Build image
         uses: docker/build-push-action@14487ce63c7a62a4a324b0bfb37086795e31c6c1 # v6.16.0
         with:
-          tags: ${{ vars.DOCKER_USERNAME }}/e2e:${{ env.SHORT_COMMIT_ID }}-${{ matrix.base_image }}
-          build-args: |
-            BASE_IMAGE=${{ matrix.base_image }}
-          push: true
+          tags: ${{ vars.DOCKER_USERNAME }}/e2e:${{ env.SHORT_COMMIT_ID }}
+          push: false
