--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -80,18 +80,17 @@ jobs:
               docker images
           fi
 
-      - name: Install foundry
-        uses: foundry-rs/foundry-toolchain@v1.3.1
+      - name: Install Kurtosis CLI and Foundry
+        uses: ./kurtosis-cdk/.github/actions/kurtosis-pre-run
+        with:
+          docker_username: ${{ secrets.DOCKER_USERNAME }}
+          docker_token: ${{ secrets.DOCKER_TOKEN }}
+
+      - name: Install jq
+        run: sudo apt-get install jq -y
 
       - name: Install bats
         uses: bats-core/bats-action@3.0.0
-
-      - name: Install kurtosis cli and jq
-        run: |
-          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-          sudo apt update
-          sudo apt install -y kurtosis-cli jq
-          kurtosis analytics disable
 
       - name: Write args input to a file
         run: |
