feat: make the workflow runs not fail if step fails

--- a/.github/workflows/aggkit-e2e-multi-chains.yml
+++ b/.github/workflows/aggkit-e2e-multi-chains.yml
@@ -193,6 +193,7 @@ jobs:
 
       - name: Record test run in Datadog
         if: always()
+        continue-on-error: true
         uses: agglayer/gha-record-e2e-test-run@v1
         with:
           enable_ai_analysis: "true"
