--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -158,6 +158,7 @@ jobs:
 
       - name: Record test run in Datadog
         if: always()
+        continue-on-error: true
         uses: agglayer/gha-record-e2e-test-run@v1
         with:
           enable_ai_analysis: "true"
