--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -117,12 +117,11 @@ jobs:
           set +a
           export BATS_LIB_PATH="$PWD/core/helpers/lib"
           export PROJECT_ROOT="$PWD"
-          export ENCLAVE_NAME="${{ inputs.kurtosis-cdk-enclave-name }}"
-          if [[ $ENCLAVE_NAME == "op" ]]; then
+          export ENCLAVE="${{ inputs.kurtosis-cdk-enclave-name }}"
+          if [[ $ENCLAVE == "op" ]]; then
           bats ./tests/aggkit/bridge-e2e.bats \
                ./tests/aggkit/e2e-pp.bats \
                ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
-               ./tests/op/optimistic-mode.bats \
                  || exit 1
           else
             bats ./tests/aggkit/bridge-e2e.bats \
