test: only apply shellcheck to newly added sh/bash files
Signed-off-by: Ji Hwan <jkim@polygon.technology>

--- a/.github/workflows/shellcheck.yml
+++ b/.github/workflows/shellcheck.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - name: Install dependencies
         run: |
@@ -36,6 +38,12 @@ jobs:
           cabal update
           cabal install --install-method=copy --installdir=/usr/local/bin
 
-      - name: Run ShellCheck
+      - name: Run ShellCheck on changed files
         run: |
-          find . -type f \( -name "*.sh" -o -name "*.bash" \) -exec shellcheck -s bash -S warning {} +
+          CHANGED_FILES=$(git diff --name-only --diff-filter=AM HEAD^ HEAD | grep -E '\.(sh|bash)$' || true)
+          if [[ -n "$CHANGED_FILES" ]]; then
+            echo "Checking files: $CHANGED_FILES"
+            echo "$CHANGED_FILES" | xargs -r shellcheck -s bash -S warning
+          else
+            echo "No .sh or .bash files changed in this commit or PR."
+          fi
