--- a/.github/workflows/aggkit-e2e-single-chain.yml
+++ b/.github/workflows/aggkit-e2e-single-chain.yml
@@ -121,11 +121,13 @@ jobs:
           if [[ $ENCLAVE == "op" ]]; then
             bats ./tests/aggkit/bridge-e2e.bats \
                  ./tests/aggkit/e2e-pp.bats \
-                 ./tests/aggkit/bridge-sovereign-chain-e2e.bats
+                 ./tests/aggkit/bridge-sovereign-chain-e2e.bats \
+                 ./tests/aggkit/internal-claims.bats
           else
             bats ./tests/aggkit/bridge-e2e.bats \
                  ./tests/aggkit/e2e-pp.bats \
-                 ./tests/aggkit/bridge-e2e-custom-gas.bats
+                 ./tests/aggkit/bridge-e2e-custom-gas.bats \
+                 ./tests/aggkit/internal-claims.bats
           fi
           popd
 
