parameterised all sensitive information

--- a/scenarios/okx-hemez-pp-migration/env.example
+++ b/scenarios/okx-hemez-pp-migration/env.example
@@ -1,6 +1,6 @@
 TENDERLY_FORK_URL=
 TIMELOCK_ADDRESS=
-L1_RPC_URL=http://127.0.0.1:3000
+L1_RPC_URL=
 AGGLAYER_TEST_ACCOUNT_PRIVATE_KEY=
 SEQ_TEST_ACCOUNT_PRIVATE_KEY=
 SP1_KEY=
@@ -8,3 +8,22 @@ NETWORK_RPC_URL=
 
 OKX_ADMIN_ACCOUNT=
 POLYGON_ADMIN_ACCOUNT=
+
+L1URL=""
+L2URL=""
+AggLayerURL=""
+L2Coinbase=""
+RPCURL=""
+polygonZkEVMGlobalExitRootAddress=""
+GlobalExitRootAddr=""
+GlobalExitRootL2=""
+
+BridgeAddrL2=""
+SenderAddr=""
+
+AGGORACLE_KEYSTORE_PASSWORD=
+CLAIMSPONSOR_KEYSTORE_PASSWORD=
+SEQUENCER_KEYSTORE_PASSWORD=
+AGGLAYER_KEYSTORE_PASSWORD=
+
+POLYGON_ZKEVM_GLOBAL_EXIT_ROOT_V2_CONTRACT=""
