shellcheck check error fixing

--- a/scenarios/okx-hermez-pp-migration/.env.example
+++ b/scenarios/okx-hermez-pp-migration/.env.example
@@ -9,21 +9,21 @@ NETWORK_RPC_URL=
 OKX_ADMIN_ACCOUNT=
 POLYGON_ADMIN_ACCOUNT=
 
-L1URL=""
-L2URL=""
-AggLayerURL=""
-L2Coinbase=""
-RPCURL=""
-polygonZkEVMGlobalExitRootAddress=""
-GlobalExitRootAddr=""
-GlobalExitRootL2=""
+L1URL=
+L2URL=
+AggLayerURL=
+L2Coinbase=
+RPCURL=
+polygonZkEVMGlobalExitRootAddress=
+GlobalExitRootAddr=
+GlobalExitRootL2=
 
-BridgeAddrL2=""
-SenderAddr=""
+BridgeAddrL2=
+SenderAddr=
 
 AGGORACLE_KEYSTORE_PASSWORD=
 CLAIMSPONSOR_KEYSTORE_PASSWORD=
 SEQUENCER_KEYSTORE_PASSWORD=
 AGGLAYER_KEYSTORE_PASSWORD=
 
-POLYGON_ZKEVM_GLOBAL_EXIT_ROOT_V2_CONTRACT=""
+POLYGON_ZKEVM_GLOBAL_EXIT_ROOT_V2_CONTRACT=
