added default values to make shellcheck pass

--- a/scenarios/okx-hermez-pp-migration/.env.example
+++ b/scenarios/okx-hermez-pp-migration/.env.example
@@ -11,15 +11,15 @@ POLYGON_ADMIN_ACCOUNT=
 
 L1URL=
 L2URL=
-AggLayerURL=
-L2Coinbase=
+AggLayerURL="some-value"
+L2Coinbase="some-value"
 RPCURL=
-polygonZkEVMGlobalExitRootAddress=
-GlobalExitRootAddr=
-GlobalExitRootL2=
+polygonZkEVMGlobalExitRootAddress="some-value"
+GlobalExitRootAddr="some-value"
+GlobalExitRootL2="some-value"
 
-BridgeAddrL2=
-SenderAddr=
+BridgeAddrL2="some-value"
+SenderAddr="some-value"
 
 AGGORACLE_KEYSTORE_PASSWORD=
 CLAIMSPONSOR_KEYSTORE_PASSWORD=
